Patching xkb config with xmodmap regardless of the difference between current and xkb config

Even if XKB configs are same, xmodmap should be activated.
https://bugzilla.gnome.org/show_bug.cgi?id=660000